# extensive_calibrate

./: CMakeLists.txt  Makefile  README.md  app_fisheye_calibrate.cpp  base_model.hpp  batch.sh  calibration.cpp  fisheye_model.hpp  generic_model.hpp  main.cpp  omnidir_model.hpp
python_code/: base_model.py  extensive_calibrate.py  fisheye_model.py  generic_model.py  omnidir_model.py
